--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,5 +16,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: deploy
-          FOLDER: ./
+          BRANCH: gh-pages
+          FOLDER: .
